fix overflow + size

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -201,8 +201,8 @@ html,body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	user-select: none;
 	background-color: #787878;
+	overflow: hidden;
 }
 
 #left {
@@ -216,7 +216,7 @@ html,body {
 
 #right {
 	background-color: gray;
-	width: 1289px;
+	width: 1304px;
 	height: 100%;
 	float: left;
 	user-select: none;
